<resources>
    <string name="required_location_permission_text">Please provide access to Location permission for this functionality to work.</string>
    <string name="required_location_ok_text">OK</string>
    <string name="required_location_cancel_text">Cancel</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiaW5jaWRlbmNlIiwiYSI6ImNrcGVkZ2N0cTFxN3QycGxseDByeHB4MTIifQ.r6JVDWZcx5zmzqqShAhbIA</string>
    <string name="app_name">IncidenceAPP</string>
    <string name="nombre_app">IncidenceAPP</string>
    <string name="welcome_slide_1_title">Crea una cuenta</string>
    <string name="welcome_slide_1_subtitle">Añade tus datos personales, los datos de tu vehículo y tu seguro</string>
    <string name="welcome_slide_2_title">Sincroniza tu baliza</string>
    <string name="welcome_slide_2_subtitle">Activa tu localización y vincula tu baliza Help Flash u otros dispositivos compatibles</string>
    <string name="welcome_slide_3_title">Reporta incidencias</string>
    <string name="welcome_slide_3_subtitle">Recibe asistencia en carretera en caso de avería o llamaremos a emergencias en caso de accidente</string>
    <string name="next">Siguiente</string>
    <string name="create_account">Crear cuenta</string>
    <string name="create_one_account">Crear una cuenta</string>
    <string name="create_new_account">Crear nueva cuenta</string>
    <string name="create_account_step1">Datos personales</string>
    <string name="create_account_step2">Vehículo y seguro</string>
    <string name="create_account_step3">Sincronización con baliza</string>
    <string name="already_have_account">¿Ya tienes una cuenta?</string>
    <string name="already_not_have_account">¿Aún no tienes una cuenta?</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="sign_out_message">¿Quieres cerrar sesión?</string>
    <string name="sign_out_on_device">¿Quieres cerrar sesión en %1s?</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="delete_account_message">¿Quieres eliminar tu cuenta?\nSi eliminas tu cuenta, se borrará toda tu información de nuestra base de datos.</string>
    <string name="my_data">Mis datos</string>
    <string name="active_sessions">Sesiones activas</string>
    <string name="notifications">Notificaciones</string>
    <string name="help">Ayuda</string>
    <string name="continuar">Continuar</string>
    <string name="acepto">Acepto</string>
    <string name="sign_in_phone">Iniciar sesión con teléfono</string>
    <string name="sign_in_email">Iniciar sesión con correo electrónico</string>
    <string name="sign_in_phone_change">Iniciar con teléfono</string>
    <string name="sign_in_email_change">Iniciar con correo electrónico</string>
    <string name="hola_nombre">¡Hola, %1s!</string>
    <string name="hola">¡Hola!</string>
    <string name="name_surname_title">Añade tu nombre y apellidos</string>
    <string name="name_surname">Nombre y Apellidos</string>
    <string name="phone_title">Te enviaremos un mensaje de texto para verificar tu número</string>
    <string name="email_title">Te enviaremos un correo electrónico para verificar tu cuenta</string>
    <string name="phone">Teléfono</string>
    <string name="mobile_phone">Teléfono móvil</string>
    <string name="nif_title">Añade tu documento de identidad</string>
    <string name="nif">DNI</string>
    <string name="nie">NIE</string>
    <string name="cif">CIF</string>
    <string name="nif_doc_identity">Documento de identidad</string>
    <string name="email_title_signup">Por último, añade tu correo electrónico para completar tu perfil</string>
    <string name="email">Correo electrónico</string>
    <string name="privacy">Política de privacidad</string>
    <string name="later">Más tarde</string>
    <string name="go_home">Ir a inicio</string>
    <string name="success_create_your_account">¡Tu cuenta se ha creado con éxito!</string>
    <string name="policy_expired">Tu póliza ha caducado</string>
    <string name="policy_expired_desc">Debes actualizar la fecha de caducidad de tu póliza para que podamos ponerte en contacto con tu aseguradora</string>
    <string name="incidence_tip_lights">Activa las luces de emergencia</string>
    <string name="incidence_tip_vest">Ponte el chaleco reflectante</string>
    <string name="incidence_tip_exit_car">En el caso de salir del coche, hazlo por el lado más seguro</string>
    <string name="incidence_tip_beacon">Enciende tu baliza en modo destello</string>
    <string name="your_insurance_contact_you">Tu aseguradora se pondrá en contacto contigo en unos minutos:</string>
    <string name="make_valoration">Dar valoración</string>
    <string name="title_assist_finished">La grúa ha llegado con éxito</string>
    <string name="subtitle_assist_finished">Esperamos que recibas la asistencia adecuada</string>
    <string name="contact_grua">Contactar con la grúa</string>
    <string name="default_empty_ws_response_subtitle">Make the request again to refresh the data</string>
    <string name="default_error_ws_response_button">Retry</string>
    <string name="default_empty_ws_response_title">No results found</string>
</resources>