<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:background="@android:color/transparent"
    android:id="@+id/layoutRoot">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            android:id="@+id/lblTitle"
            android:text="@string/default_empty_ws_response_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:id="@+id/lblSubtitle"
            android:layout_marginTop="14dp"
            android:layout_below="@+id/lblTitle"
            android:text="@string/default_empty_ws_response_subtitle"/>

        <com.e510.commons.view.PrimaryButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/lblSubtitle"
            android:id="@+id/button"
            app:topTitle="@string/default_error_ws_response_button" />

    </RelativeLayout>

</RelativeLayout>