<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgInsurance"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal" />


        <TextView
            android:layout_toRightOf="@+id/imgInsurance"
            android:id="@+id/txtDescription"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black600"
            android:textSize="14sp"
            android:lineHeight="24dp"
            android:text="@string/your_insurance_contact_you"/>


        <RelativeLayout
            android:layout_below="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="@dimen/margin_normal"
            android:id="@+id/layoutTips">

            <ImageView
                android:id="@+id/img0"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="@dimen/margin_normal"
                android:src="@drawable/icon_tip_beacon" />

            <TextView
                android:id="@+id/txt0"
                android:layout_toRightOf="@+id/img0"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="22dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/incidence600"
                android:textSize="16sp"
                android:lineHeight="20dp"
                android:text="@string/incidence_tip_beacon"/>

            <ImageView
                android:layout_below="@+id/txt0"
                android:id="@+id/img1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="@dimen/margin_normal"
                android:src="@drawable/icon_tip_sun" />

            <TextView
                android:layout_below="@+id/txt0"
                android:id="@+id/txt1"
                android:layout_toRightOf="@+id/img1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="22dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/incidence600"
                android:textSize="16sp"
                android:lineHeight="20dp"
                android:text="@string/incidence_tip_lights"/>

            <ImageView
                android:layout_below="@+id/txt1"
                android:id="@+id/img2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="@dimen/margin_normal"
                android:src="@drawable/icon_tip_vest" />

            <TextView
                android:layout_below="@+id/txt1"
                android:id="@+id/txt2"
                android:layout_toRightOf="@+id/img2"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="22dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/incidence600"
                android:textSize="16sp"
                android:lineHeight="20dp"
                android:text="@string/incidence_tip_vest"/>

            <ImageView
                android:layout_below="@+id/txt2"
                android:id="@+id/img3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="@dimen/margin_normal"
                android:src="@drawable/icon_tip_vehicle" />

            <TextView
                android:layout_below="@+id/txt2"
                android:id="@+id/txt3"
                android:layout_toRightOf="@+id/img3"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="@dimen/margin_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/incidence600"
                android:textSize="16sp"
                android:lineHeight="20dp"
                android:text="@string/incidence_tip_exit_car"/>


        </RelativeLayout>


    </RelativeLayout>


</ScrollView>